--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 
 <div class="row solo hide-for-small" id="graphic">
 	<div class="large-10 large-centered medium-12 medium-centered small-12 columns">
-		<h3 class="subheading">VA's new hospital: Inside and out</h3>
+		<h3 class="subheading">VA&rsquo;s new hospital: Inside and out</h3>
 		<p>What kind of a hospital does $1.67 billion buy? In the case of the VA medical center under construction in Aurora, it&rsquo;s a 12-building, 1.2 million-square-foot campus on 31 acres. The price does not include furniture and equipment. The VA says it will spend an additional $340 million to equip the hospital. Not included in the numbers below are costs for land purchase and site development. VA officials say the hospital will open by the end of 2017.</p>
 		<div class="large-12 large-centered medium-12 medium-centered small-12 columns" id="graphics">
 			<img src="./img/graphic-back.jpg" alt="Click red points for site details" />
