--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 			<div class="timeline-connector"></div>
 			<div class="timeline-box">
 				<div class="timeline-date">APRIL 2007</div>
-				<p class="timeline-blurb">Nicholson announces a state-of-the-art showcase medical center with 1.4 million square feet of building space. The price is pegged at <span class="timeline-cost">$523 million</span>.</p>
+				<p class="timeline-blurb">Nicholson announces a stand-alone medical campus covering 1.4 million square feet on 31 acres. Price is pegged at <span class="timeline-cost">$523 million</span>.</p>
 			</div>
 			<div class="timeline-connector"></div>
 			<div class="timeline-box">
@@ -697,8 +697,8 @@
 			</div>
 			<p class="caption"><span class="captionhed">Doug Lamborn </span>House Committee on Veterans&rsquo; Affairs hearing, April 15, 2015.</p>
 		</div>	
-		<p>At an April 15 hearing this year &mdash; which focused on the Aurora project and its problems &mdash; Lamborn barely registered as a presence.</p>
-		<p>&ldquo;I don&rsquo;t even know where to begin. This is just beyond my comprehension &mdash; how we got to this point. I&rsquo;m appalled and angry,&rdquo; he said in a short delivery.</p>
+		<p>At an April 15 hearing this year &mdash; which focused on the Aurora project and its problems &mdash; Lamborn gave a short delivery and asked several questions.</p>
+		<p>&ldquo;I don&rsquo;t even know where to begin. This is just beyond my comprehension &mdash; how we got to this point. I&rsquo;m appalled and angry,&rdquo; he said.</p>
 		<p>Lamborn then left the hearing, which lasted about two more hours.</p>
 		<p>His staff said he had schedule conflicts those two days and that he has taken part in dozens of phone calls and other meetings concerning the project.</p>
 		<p>In a statement, Lamborn said he joined the oversight and investigations subcommittee in 2011 &ldquo;due to my growing concern over lack of accountability within the VA.&rdquo; In multiple hearings since then, &ldquo;we have asked tough questions of VA officials and have become increasingly concerned over VA&rsquo;s in-house construction capability,&rdquo; he said.</p>
@@ -708,7 +708,7 @@
 <div class="row solo" id="lessons">
 	<div class="large-10 large-centered medium-10 medium-centered small-12 columns">
 		<h3 class="subheading">&ldquo;Lessons learned&rdquo;</h3>
-		<p>Facing questions from lawmakers about overspending on hospital projects in Aurora and elsewhere, VA officials typically provided few answers.</p>
+		<p>Facing questions from lawmakers about overspending on hospital projects in Aurora and elsewhere, VA officials have frequently remarked that they learned lessons from these mistakes.</p>
 		<div class="large-12 large-centered medium-12 medium-centered small-12 columns centervideo">
 			<div class="vid-embed-wrap">
 				<div class="vid-height-space"></div>
