--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
 				<p class="bylinebottom"><i>Denver Post graphic designer Severiano Galv&aacute;n contributed to this report.</i></p>
 				<p><a class="hideme" href="javascript:toggleSidebar('#concourselink','#concourse');">Collapse this story</a></p>
 			</div>
-		</section>	
+		</section>
 		<p>Parking was an issue, too, including the south visitors parking lot.</p>
 		<p>One proposal called for part of the structure to be built underground &mdash; a costly approach because that would require &ldquo;foundation walls, waterproofing and subgrade foundation systems,&rdquo; according to court records.</p>
 		<p>A suggestion to lower the cost by bringing the whole garage above-ground and then adding levels to another parking lot was rejected.</p>
@@ -696,7 +696,7 @@
 				<div class="clear"></div>
 			</div>
 			<p class="caption"><span class="captionhed">Doug Lamborn </span>House Committee on Veterans&rsquo; Affairs hearing, April 15, 2015.</p>
-		</div>	
+		</div>
 		<p>At an April 15 hearing this year &mdash; which focused on the Aurora project and its problems &mdash; Lamborn barely registered as a presence.</p>
 		<p>&ldquo;I don&rsquo;t even know where to begin. This is just beyond my comprehension &mdash; how we got to this point. I&rsquo;m appalled and angry,&rdquo; he said in a short delivery.</p>
 		<p>Lamborn then left the hearing, which lasted about two more hours.</p>
@@ -837,7 +837,7 @@
 
 			</li>
 			<li data-equalizer-watch>
-				<div class="card">					
+				<div class="card">
 					<h4>Sloan Gibson</h4>
 					<img src="./img/mug-gibson.jpg" alt="Sloan Gibson">
 					<p>New deputy VA secretary. Agency&rsquo;s point man on the Aurora hospital crisis. Calls previous mistakes unacceptable.</p>
@@ -961,9 +961,44 @@
 	<div class="large-8 large-centered medium-10 medium-centered small-12 columns">
 		<p class="bylinebottom"><i>Mark K. Matthews: <a href="tel:+12026628907">202-662-8907</a>, <a href="mailto:mmatthews@denverpost.com?subject=Aurora VA hospital project">mmatthews@denverpost.com</a> or <a href="twitter.com/mkmatthews" title="Mark K Matthews on Twitter">@mkmatthews</a></i></p>
 		<p class="bylinebottom"><i>David Olinger: <a href="tel:+13039541498">303-954-1498</a>, <a href="mailto:dolinger@denverpost.com?subject=Aurora VA hospital project">dolinger@denverpost.com</a> or <a href="twitter.com/dolingerdp" title="David Olinger on Twitter">@dolingerdp</a></i></p>
-		<p class="bylinebottom"><i>David Migoya: <a href="tel:+1303954">303-954-</a>, <a href="mailto:dmigoya@denverpost.com?subject=Aurora VA hospital project">dmigoya@denverpost.com</a> or <a href="twitter.com/DavidMigoya" title="David Migoya on Twitter">@DavidMigoya</a></i></p>
+		<p class="bylinebottom"><i>David Migoya: <a href="tel:+1303954">303-954-1506</a>, <a href="mailto:dmigoya@denverpost.com?subject=Aurora VA hospital project">dmigoya@denverpost.com</a> or <a href="twitter.com/DavidMigoya" title="David Migoya on Twitter">@DavidMigoya</a></i></p>
 	</div>
 </div>
+	
+<!-- FOOTNOTES -->
+  <div class="row">
+    <div class="large-8 large-centered medium-10 medium-centered small-12 columns">
+        <h3 style="margin-top:2em;">Source documents</h3>
+    </div>
+  </div>
+  <div class="row" id="footnotes" data-equalizer>
+    <div class="large-8 large-centered medium-10 medium-centered small-12 columns panel">
+      <div class="large-6 medium-6 small-12 columns" data-equalizer-watch>
+        <ul class="footnotes">
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189928-handwritten-agreement.html" class="source">1</a> &ldquo;Path Forward&rdquo; handwritten agreement</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189924-sa-007-james-bond.html" class="source">2</a> Kiewitt-Turner &ldquo;007 James Bond&rdquo; document</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189925-congressional-letter.html" class="source">3</a> Letter from Colorado&rsquo;s congressional delegation voicing their concerns</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189946-sevca-construction-lay-down-meeting.html#document/p89" class="source">4</a> Construction meeting transcript<br>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2195749-project-management-plan.html" class="source">5</a> Hospital project management plan</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189950-warning-letter.html" class="source">6</a> Letter from Thomas Fromm warning the VA from going forward with Kiewit-Turnver contract</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193911-construction-cost-blank.html" class="source">8</a> Document limiting construction cost with total blank</li>
+        </ul>
+        <div class="clear"></div>
+      </div>
+      <div class="large-6 medium-6 small-12 columns" data-equalizer-watch>
+        <ul class="footnotes">
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189951-finding-of-fact.html#document/p30" class="source">8</a> Kiewit-Turner Finding of Fact</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189947-va-memo-cost-reconciliation-information.html" class="source">9</a> VA memo: Cost reconciliatio information</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193925-fromm-letter-january-2012.html" class="source">10</a> Letter from Thomas alleging VA of withholding information</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193873-gao-report.html" class="source">11</a> 2013 GAO report: Additional Actions Needed to Decrease Delays and Lower Costs</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193886-civilian-board-of-contract-appeals.html" class="source">12</a> Civilian Baord of Contract Appeals decision</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193893-gao-report-january-2015.html" class="source">13</a> 2015 GAO Report: VA&rsquo;s Actions to Address Cost Increases</li>
+        </ul>
+        <div class="clear"></div>
+        </div>
+        <div class="clear"></div>
+    </div>
+  </div>
 
 <div class="row">
 	<div class="large-10 large-centered medium-12 medium-centered small-12 columns">
