--- a/index.html
+++ b/index.html
@@ -976,11 +976,11 @@
       <div class="large-6 medium-6 small-12 columns" data-equalizer-watch>
         <ul class="footnotes">
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189928-handwritten-agreement.html" class="source">1</a> &ldquo;Path Forward&rdquo; handwritten agreement</li>
-          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189924-sa-007-james-bond.html" class="source">2</a> Kiewitt-Turner &ldquo;007 James Bond&rdquo; document</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189924-sa-007-james-bond.html" class="source">2</a> Kiewit-Turner &ldquo;007 James Bond&rdquo; document</li>
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189925-congressional-letter.html" class="source">3</a> Letter from Colorado&rsquo;s congressional delegation voicing their concerns</li>
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189946-sevca-construction-lay-down-meeting.html#document/p89" class="source">4</a> Construction meeting transcript<br>
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2195749-project-management-plan.html" class="source">5</a> Hospital project management plan</li>
-          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189950-warning-letter.html" class="source">6</a> Letter from Thomas Fromm warning the VA from going forward with Kiewit-Turnver contract</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189950-warning-letter.html" class="source">6</a> Letter from Thomas Fromm warning the VA from going forward with Kiewit-Turner contract</li>
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193911-construction-cost-blank.html" class="source">8</a> Document limiting construction cost with total blank</li>
         </ul>
         <div class="clear"></div>
@@ -988,10 +988,10 @@
       <div class="large-6 medium-6 small-12 columns" data-equalizer-watch>
         <ul class="footnotes">
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189951-finding-of-fact.html#document/p30" class="source">8</a> Kiewit-Turner Finding of Fact</li>
-          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189947-va-memo-cost-reconciliation-information.html" class="source">9</a> VA memo: Cost reconciliatio information</li>
-          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193925-fromm-letter-january-2012.html" class="source">10</a> Letter from Thomas alleging VA of withholding information</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189947-va-memo-cost-reconciliation-information.html" class="source">9</a> VA memo: Cost reconciliation information</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193925-fromm-letter-january-2012.html" class="source">10</a> Letter from Thomas Fromm alleging VA of withholding information</li>
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193873-gao-report.html" class="source">11</a> 2013 GAO report: Additional Actions Needed to Decrease Delays and Lower Costs</li>
-          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193886-civilian-board-of-contract-appeals.html" class="source">12</a> Civilian Baord of Contract Appeals decision</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193886-civilian-board-of-contract-appeals.html" class="source">12</a> Civilian Board of Contract Appeals decision</li>
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193893-gao-report-january-2015.html" class="source">13</a> 2015 GAO Report: VA&rsquo;s Actions to Address Cost Increases</li>
         </ul>
         <div class="clear"></div>
