--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
         <ul class="footnotes">
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189951-finding-of-fact.html#document/p30" class="source">8</a> Kiewit-Turner Finding of Fact</li>
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2189947-va-memo-cost-reconciliation-information.html" class="source">9</a> VA memo: Cost reconciliation information</li>
-          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193925-fromm-letter-january-2012.html" class="source">10</a> Letter from Thomas Fromm alleging VA of withholding information</li>
+          <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193925-fromm-letter-january-2012.html" class="source">10</a> Letter from Thomas Fromm alleging VA withheld information</li>
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193873-gao-report.html" class="source">11</a> 2013 GAO report: Additional Actions Needed to Decrease Delays and Lower Costs</li>
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193886-civilian-board-of-contract-appeals.html" class="source">12</a> Civilian Board of Contract Appeals decision</li>
           <li class="footnotes"><a href="https://www.documentcloud.org/documents/2193893-gao-report-january-2015.html" class="source">13</a> 2015 GAO Report: VA&rsquo;s Actions to Address Cost Increases</li>
