Final typos and cutlines (maybe?)

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		<p>&ldquo;This is for health care,&rdquo; Kyrgos testified. &ldquo;This is something the VA cannot sacrifice.&rdquo; He walked out of the meeting at one point, threatening to call off the talks and find another contractor.</p>
 		<div class="large-6 columns inset-video-right">
 			<img src="./img/va-note.jpg" alt="The handwritten agreement" style="border:1px solid rgba(0,0,0,0.25);" />
-			<p class="caption">The 70-word handwritten note that saved the deal &mdash; and set the stage for a financial disaster. <a href="https://www.documentcloud.org/documents/2189928-handwritten-agreement.html" class="source">PDF</a></p>
+			<p class="caption">The 70-word handwritten note that saved the deal but set the stage for a financial disaster. <a href="https://www.documentcloud.org/documents/2189928-handwritten-agreement.html" class="source">PDF</a></p>
 		</div>
 		<p>What saved the deal was a simple proposal &mdash; and a pen and paper. Rather than fight over the book&rsquo;s details, negotiators agreed to shrink the deal to a handwritten note of 70 words with two basic terms: KT would build the hospital for $604 million, and the VA would provide the design to get them there. <a href="https://www.documentcloud.org/documents/2189928-handwritten-agreement.html" class="source">1</a>
 		</p>
