Final typos and cutlines (maybe?)

--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
 		<p>&ldquo;I just leave a pair of boots out there so I&rsquo;m ready when I get there to knock around the site,&rdquo; he said in an interview.</p>
 		<p>He blamed the mess in Colorado on two factors: the VA&rsquo;s use of an unfamiliar contract method, the IDC, and its decision to agree to the terms of the 2011 handwritten note.</p>
 		<p>&ldquo;The missteps are unforgivable,&rdquo; he said. &ldquo;We own that. I own that. I have since the day I raised my hand and swore the oath. We are committed to fixing those. We are committed to finishing this project.&rdquo;</p>
-		<p>But he was optimistic for the future &mdash; as well as how veterans and taxpayers ultimately will see the project, which he expected would be complete by the end of 2017.</p>
+		<p>But Gibson was optimistic for the future &mdash; as well as how veterans and taxpayers ultimately will see the project, which he expected would be complete by the end of 2017.</p>
 		<p>&ldquo;It&rsquo;s going to be a marvelous place for veterans to receive their care for decades to come,&rdquo; he said. &ldquo;And quite frankly, I think you get some relatively small number of years down the road and people aren&rsquo;t going to be thinking or talking about what the building cost. They are going to be thinking about the great care that&rsquo;s being delivered for veterans.&rdquo;</p>
 
 <!-- PHOTO -->
