--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
 					<h4>Anthony Principi</h4>
 					<img src="./img/mug-principi.jpg" alt="Anthony Principi">
 					<p>Served as VA secretary during the first term of George W. Bush, from 2001 to 2005. He pushed the idea of a shared hospital with the University of Colorado but veterans objected.</p>
-					<p class="salary">Salary: $175,700 <small>(2004)</small></p>
+					<p class="salary">Est. salary: $175,700 <small>(2004)</small></p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
@@ -818,7 +818,7 @@
 					<h4>Jim Nicholson</h4>
 					<img src="./img/mug-nicholson.jpg" alt="Jim Nicholson">
 					<p>Succeeded Principi in Bush&rsquo;s second term, serving from January 2005 to October 2007. A decorated Vietnam War veteran, he secured land for a stand-alone facility in Aurora.</p>
-					<p class="salary">Salary: $186,600 <small>(2007)</small></p>
+					<p class="salary">Est. salary: $186,600 <small>(2007)</small></p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
@@ -826,7 +826,7 @@
 					<h4>Eric Shinseki</h4>
 					<img src="./img/mug-shinseki.jpg" alt="Eric Shinseki">
 					<p>VA secretary when Aurora hospital construction began, resigned in 2014 over Phoenix waiting list scandal.</p>
-					<p class="salary">Salary: $199,700 <small>(2013)</small></p>
+					<p class="salary">Est. salary: $199,700 <small>(2013)</small></p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
@@ -834,7 +834,7 @@
 					<h4>Robert McDonald</h4>
 					<img src="./img/mug-mcdonald.jpg" alt="Robert McDonald">
 					<p>New VA secretary, replaced Eric Shinseki. Responsible for persuading Congress that the VA has an  appropriate plan for finishing its Aurora medical center.</p>
-					<p class="salary">Salary: $199,700</p>
+					<p class="salary">Est. salary: $199,700</p>
 
 			</li>
 			<li data-equalizer-watch>
@@ -842,7 +842,7 @@
 					<h4>Sloan Gibson</h4>
 					<img src="./img/mug-gibson.jpg" alt="Sloan Gibson">
 					<p>New deputy VA secretary. Agency&rsquo;s point man on the Aurora hospital crisis. Calls previous mistakes unacceptable.</p>
-					<p class="salary">Salary: $179,700</p>
+					<p class="salary">Est. salary: $179,700</p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
@@ -850,7 +850,7 @@
 					<h4>Glenn Haggstrom</h4>
 					<img src="./img/mug-haggstrom.jpg" alt="Glenn Haggstrom">
 					<p>Principal executive director, Office of Acquisition, Logistics and Construction, retired in 2015 after being questioned about cost overruns and delays on the Aurora project.</p>
-					<p class="salary">Salary: $181,497</p>
+					<p class="salary">Est. salary: $181,497</p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
@@ -858,7 +858,7 @@
 					<h4>Robert Neary</h4>
 					<img src="./img/mug-neary.jpg" alt="Robert Neary">
 					<p>Former acting director of Office of Construction and Facilities Management, helped plan Aurora project before retiring at the end of 2012.</p>
-					<p class="salary">Salary: $179,700 <small>(2012)</small></p>
+					<p class="salary">Est. salary: $179,700 <small>(2012)</small></p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
@@ -866,21 +866,21 @@
 					<h4>Stella Fiotes</h4>
 					<img src="./img/mug-fiotes.jpg" alt="Stella Fiotes">
 					<p>Executive director, Office of Construction and Facilities Management. Responsible for VA construction projects.</p>
-					<p class="salary">Salary: $179,700</p>
+					<p class="salary">Est. salary: $179,700</p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
 				<div class="card">
 					<h4>Phillipa Anderson</h4>
 					<p>Assistant general counsel, led VA legal staff from development of Aurora contract through litigation with contractor Kiewit-Turner. Retired in 2015 amid VA-initiated investigation of Aurora project.</p>
-					<p class="salary">Salary: $175,336</p>
+					<p class="salary">Est. salary: $175,336</p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
 				<div class="card">
 					<h4>Chris Kyrgos</h4>
 					<p>Senior contracting officer, supervised Aurora project from Washington, D.C., retired in 2015.</p>
-					<p class="salary">Salary: $157,100</p>
+					<p class="salary">Est. salary: $157,100</p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
@@ -888,28 +888,28 @@
 					<h4>Lynette Roff</h4>
 					<img src="./img/mug-roff.jpg" alt="Lynette Roff">
 					<p>Directed Denver VA medical center while replacement hospital was under construction. Retired in 2015 amid questions about her leadership and patient waiting lists.</p>
-					<p class="salary">Salary: $181,497</p>
+					<p class="salary">Est. salary: $181,497</p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
 				<div class="card">
 					<h4>Charlma Quarles</h4>
 					<p>Deputy assistant general counsel, filed briefs for VA legal team in Kiewit-Turner case. She is still employed by the VA.</p>
-					<p class="salary">Salary: $157,100</p>
+					<p class="salary">Est. salary: $157,100</p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
 				<div class="card">
 					<h4>Timothy Pogany</h4>
 					<p>Former project director responsible for supervising design and construction in Aurora, reassigned in 2013.</p>
-					<p class="salary">Salary: $136,246</p>
+					<p class="salary">Est. salary: $136,246</p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
 				<div class="card">
 					<h4>Thaddeus Willoughby</h4>
 					<p>Contract officer, responsible for administering the contract terms. He is still employed by the VA.</p>
-					<p class="salary">Salary: $122,274</p>
+					<p class="salary">Est. salary: $122,274</p>
 				</div>
 			</li>
 			<li data-equalizer-watch>
@@ -917,7 +917,7 @@
 					<h4>Thomas Hayden</h4>
 					<img src="./img/mug-hayden.jpg" alt="Thomas Hayden">
 					<p>Former senior resident engineer on Aurora project, reassigned in 2013.</p>
-					<p class="salary">Salary: $115,288</p>
+					<p class="salary">Est. salary: $115,288</p>
 				</div>
 			</li>
 		</ul>
