Key Players tweaks

--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
 				<div class="card">
 					<h4>Anthony Principi</h4>
 					<img src="./img/mug-principi.jpg" alt="Anthony Principi">
-					<p>Served as VA secretary during the first term of George W. Bush, from 2001 to 2005. He pushed the idea of a shared hospital with the University of Colorado but veterans objected.</p>
+					<p>Served as VA secretary during the first term of George W. Bush, from 2001 to 2005. He pushed the idea of a shared hospital with the University of Colorado, but veterans objected.</p>
 					<p class="salary">Est. salary: $175,700 <small>(2004)</small></p>
 				</div>
 			</li>
@@ -825,7 +825,7 @@
 				<div class="card">
 					<h4>Eric Shinseki</h4>
 					<img src="./img/mug-shinseki.jpg" alt="Eric Shinseki">
-					<p>VA secretary when Aurora hospital construction began, resigned in 2014 over Phoenix waiting list scandal.</p>
+					<p>VA secretary when Aurora hospital construction began. Resigned in 2014 over Phoenix waiting-list scandal.</p>
 					<p class="salary">Est. salary: $199,700 <small>(2013)</small></p>
 				</div>
 			</li>
@@ -849,7 +849,7 @@
 				<div class="card">
 					<h4>Glenn Haggstrom</h4>
 					<img src="./img/mug-haggstrom.jpg" alt="Glenn Haggstrom">
-					<p>Principal executive director, Office of Acquisition, Logistics and Construction, retired in 2015 after being questioned about cost overruns and delays on the Aurora project.</p>
+					<p>Principal executive director, Office of Acquisition, Logistics and Construction. Retired in 2015 after being questioned about cost overruns and delays on the Aurora project.</p>
 					<p class="salary">Est. salary: $181,497</p>
 				</div>
 			</li>
@@ -857,7 +857,7 @@
 				<div class="card">
 					<h4>Robert Neary</h4>
 					<img src="./img/mug-neary.jpg" alt="Robert Neary">
-					<p>Former acting director of Office of Construction and Facilities Management, helped plan Aurora project before retiring at the end of 2012.</p>
+					<p>Former acting director of Office of Construction and Facilities Management. Helped plan Aurora project before retiring at the end of 2012.</p>
 					<p class="salary">Est. salary: $179,700 <small>(2012)</small></p>
 				</div>
 			</li>
@@ -879,7 +879,7 @@
 			<li data-equalizer-watch>
 				<div class="card">
 					<h4>Chris Kyrgos</h4>
-					<p>Senior contracting officer, supervised Aurora project from Washington, D.C., retired in 2015.</p>
+					<p>Senior contracting officer, supervised Aurora project from Washington. Retired in 2015.</p>
 					<p class="salary">Est. salary: $157,100</p>
 				</div>
 			</li>
@@ -901,7 +901,7 @@
 			<li data-equalizer-watch>
 				<div class="card">
 					<h4>Timothy Pogany</h4>
-					<p>Former project director responsible for supervising design and construction in Aurora, reassigned in 2013.</p>
+					<p>Former project director responsible for supervising design and construction in Aurora. Reassigned in 2013.</p>
 					<p class="salary">Est. salary: $136,246</p>
 				</div>
 			</li>
@@ -916,7 +916,7 @@
 				<div class="card">
 					<h4>Thomas Hayden</h4>
 					<img src="./img/mug-hayden.jpg" alt="Thomas Hayden">
-					<p>Former senior resident engineer on Aurora project, reassigned in 2013.</p>
+					<p>Former senior resident engineer on Aurora project. Reassigned in 2013.</p>
 					<p class="salary">Est. salary: $115,288</p>
 				</div>
 			</li>
