--- a/index.html
+++ b/index.html
@@ -193,6 +193,41 @@
 		<p class="blurb">A 2011 meeting between officials from the veterans affairs department and its construction contractor set the stage for financial disaster.</p>
 	</div>
 </div>
+
+<div class="row solo" id="build">
+	<div class="large-10 large-centered medium-10 medium-centered small-12 columns">
+		<h3 class="subheading">Construction</h3>
+		<div class="large-12 large-centered medium-12 medium-centered small-12 columns centervideo">
+			<div class="imgholder">
+				<img id="buildimg" src="./img/build/build-title.jpg" />
+				<div id="builddate"></div>
+			</div>
+			<p class="caption"><span class="photog">Imagery by DigitalGlobe, U.S. Geological Survey and Google, via Google Earth</span></p>
+			<div class="row" id="buildcontrols">
+				<div class="large-1 medium-2 small-3 columns">
+					<button id="buildplaypause" class="buildplay"></button>
+				</div>
+				<div class="large-11 medium-10 small-9 columns">
+					<div id="buildnav">
+						<button data-img="2002-09" data-text="September 2002"></button>
+						<button data-img="2002-12" data-text="December 2002"></button>
+						<button data-img="2003-05" data-text="May 2003"></button>
+						<button data-img="2004-04" data-text="April 2004"></button>
+						<button data-img="2004-10" data-text="October 2004"></button>
+						<button data-img="2007-03" data-text="March 2007"></button>
+						<button data-img="2008-03" data-text="March 2008"></button>
+						<button data-img="2010-06" data-text="June 2010"></button>
+						<button data-img="2012-10" data-text="October 2012"></button>
+						<button data-img="2013-10" data-text="October 2013"></button>
+						<button data-img="2014-06" data-text="June 2014"></button>
+						<button data-img="2014-10" data-text="October 2014"></button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <!-- LEDE -->
 <div class="row">
 	<div class="large-8 large-centered medium-10 medium-centered small-12 columns">
