Imagery tweak explains appearing and disappearing building -- fixed.

--- a/index.html
+++ b/index.html
@@ -194,40 +194,6 @@
 	</div>
 </div>
 
-<div class="row solo" id="build">
-	<div class="large-10 large-centered medium-10 medium-centered small-12 columns">
-		<h3 class="subheading">Construction</h3>
-		<div class="large-12 large-centered medium-12 medium-centered small-12 columns centervideo">
-			<div class="imgholder">
-				<img id="buildimg" src="./img/build/build-title.jpg" />
-				<div id="builddate"></div>
-			</div>
-			<p class="caption"><span class="photog">Imagery by DigitalGlobe, U.S. Geological Survey and Google, via Google Earth</span></p>
-			<div class="row" id="buildcontrols">
-				<div class="large-1 medium-2 small-3 columns">
-					<button id="buildplaypause" class="buildplay"></button>
-				</div>
-				<div class="large-11 medium-10 small-9 columns">
-					<div id="buildnav">
-						<button data-img="2002-09" data-text="September 2002"></button>
-						<button data-img="2002-12" data-text="December 2002"></button>
-						<button data-img="2003-05" data-text="May 2003"></button>
-						<button data-img="2004-04" data-text="April 2004"></button>
-						<button data-img="2004-10" data-text="October 2004"></button>
-						<button data-img="2007-03" data-text="March 2007"></button>
-						<button data-img="2008-03" data-text="March 2008"></button>
-						<button data-img="2010-06" data-text="June 2010"></button>
-						<button data-img="2012-10" data-text="October 2012"></button>
-						<button data-img="2013-10" data-text="October 2013"></button>
-						<button data-img="2014-06" data-text="June 2014"></button>
-						<button data-img="2014-10" data-text="October 2014"></button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
 <!-- LEDE -->
 <div class="row">
 	<div class="large-8 large-centered medium-10 medium-centered small-12 columns">
@@ -697,8 +663,48 @@
 		<p>&ldquo;KT is putting our project in jeopardy and (the design team) is not helping,&rdquo; Kyrgos wrote in one e-mail. </p>
 		<p>In a 12-page evaluation of each option, VA predicted that keeping KT could prove costly.</p>
 		<p>&ldquo;Expect a court battle on a large claim,&rdquo; the analysis noted. &ldquo;KT could decide to refuse to continue without assurance of additional funds, leading to KT walking off the job.&rdquo;</p>
-		<p>In this instance, the VA&rsquo;s foresight was <a href="http://www.denverpost.com/news/ci_27103393/contractor-kiewit-walking-away-from-va-hospital-aurora">strikingly accurate</a>. </p>
-		
+		<p>In this instance, the VA&rsquo;s foresight was <a href="http://www.denverpost.com/news/ci_27103393/contractor-kiewit-walking-away-from-va-hospital-aurora">strikingly accurate</a>.</p>
+	</div>
+</div>
+
+
+<div class="row solo" id="build">
+	<div class="large-10 large-centered medium-10 medium-centered small-12 columns">
+		<h3 class="subheading">Construction</h3>
+		<p>Watch the site of the Aurora VA hospital project as it progresses through the last 13 years of changes through satellite photography.</p>
+		<div class="large-12 large-centered medium-12 medium-centered small-12 columns centervideo">
+			<div class="imgholder">
+				<img id="buildimg" src="./img/build/build-title.jpg" />
+				<div id="builddate"></div>
+			</div>
+			<p class="caption"><span class="photog">Imagery by DigitalGlobe, U.S. Geological Survey and Google, via Google Earth</span></p>
+			<div class="row" id="buildcontrols">
+				<div class="large-1 medium-2 small-3 columns">
+					<button id="buildplaypause" class="buildplay"></button>
+				</div>
+				<div class="large-11 medium-10 small-9 columns">
+					<div id="buildnav">
+						<button data-img="2001-12" data-text="December 2001"></button>
+						<button data-img="2002-09" data-text="September 2002"></button>
+						<button data-img="2003-05" data-text="May 2003"></button>
+						<button data-img="2004-04" data-text="April 2004"></button>
+						<button data-img="2004-10" data-text="October 2004"></button>
+						<button data-img="2007-03" data-text="March 2007"></button>
+						<button data-img="2008-03" data-text="March 2008"></button>
+						<button data-img="2010-06" data-text="June 2010"></button>
+						<button data-img="2012-10" data-text="October 2012"></button>
+						<button data-img="2013-10" data-text="October 2013"></button>
+						<button data-img="2014-06" data-text="June 2014"></button>
+						<button data-img="2014-10" data-text="October 2014"></button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	<div class="large-8 large-centered medium-10 medium-centered small-12 columns">		
 		<h3 class="subheading">Congress on the sidelines</h3>
 		
 		<p class="lead">Even as the Aurora project slid toward disaster, one key player &mdash; Congress &mdash; spent much of its time on the sidelines.</p>
