Progress section finalized

--- a/index.html
+++ b/index.html
@@ -670,12 +670,12 @@
 
 <div class="row solo" id="build">
 	<div class="large-10 large-centered medium-10 medium-centered small-12 columns">
-		<h3 class="subheading">Construction</h3>
-		<p>Watch the site of the Aurora VA hospital project as it progresses through the last 13 years of changes through satellite photography.</p>
+		<h3 class="subheading">Progress</h3>
+		<p>Watch the site of the Aurora VA hospital project as the area has changed since 2001 through satellite imagery captured from Google Earth.</p>
 		<div class="large-12 large-centered medium-12 medium-centered small-12 columns centervideo">
 			<div class="imgholder">
 				<img id="buildimg" src="./img/build/build-title.jpg" />
-				<div id="builddate"></div>
+				<div id="builddate">Dec. 2001 &mdash; Oct. 2014</div>
 			</div>
 			<p class="caption"><span class="photog">Imagery by DigitalGlobe, U.S. Geological Survey and Google, via Google Earth</span></p>
 			<div class="row" id="buildcontrols">
