ID changed to #progress

--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
 </div>
 
 
-<div class="row solo" id="build">
+<div class="row solo" id="progress">
 	<div class="large-10 large-centered medium-10 medium-centered small-12 columns">
 		<h3 class="subheading">Progress</h3>
 		<p>Watch the site of the Aurora VA hospital project as the area has changed since 2001 through satellite imagery captured from Google Earth.</p>
