Added #progress to menu

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 				<li class="top-top"><a href="javascript:scrollDownTo('#timeline',60);">Timeline</a></li>
 				<li class="top-top"><a href="javascript:scrollDownTo('#officials',0);">Officials</a></li>
 				<li class="top-top"><a href="javascript:scrollDownTo('#lessons',0);">Lessons</a></li>
+				<li class="top-top"><a href="javascript:scrollDownTo('#progress',0);">Progress</a></li>
 				<!-- This link reveals a modal window (the HTML is at the end of the page, below the footer) -->
 				<li class="top-top"><a href="javascript:void(0);" data-reveal-id="credits">Credits</a></li>
 				<!-- end link to modal window -->
