--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 <div class="row">
 	<p class="credit">Joe Amon, Denver Post file&nbsp;</p>
 	<div class="large-9 large-centered medium-11 medium-centered small-12 columns">
+		<p class="published">Published August 9, 2015</p>
 		<p class="byline">By Mark K. Matthews, David Olinger and David Migoya</p>
 	</div>
 </div>
