--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
 		<p>The assessment proved overly optimistic.</p>
 		<p>After it agreed to the November 2011 deal, the VA clashed repeatedly with its designers as it tried &mdash; and failed &mdash; to develop a hospital plan that would fit within a $604 million budget.</p>
 		<p>Early proposals for the complex never came close to that amount. In 2008, Colorado lawmakers raised concerns about a plan purported to cost about $1.1 billion &mdash; nearly twice as much.</p>
-		<p>One submission envisioned a medical complex that would span 1.6 million square feet. It also featured the same layout seen in the project today &mdash; several buildings jutting from either side of a central spine structure.</p>fv
+		<p>One submission envisioned a medical complex that would span 1.6 million square feet. It also featured the same layout seen in the project today &mdash; several buildings jutting from either side of a central spine structure.</p>
 		<p>&ldquo;The quality of care will be second to none and nonnegotiable,&rdquo; noted a summary of the design. &ldquo;The physical facility will stand up to any comparison to any other medical center.&rdquo; </p>
 		<p> Asked about the $1.1 billion cost estimate, design team spokesman Andy Boian said it was for a &ldquo;different and much larger project plan, as requested by the (VA), than the one now under construction.&rdquo;</p>
 		<p>But according to documents filed by KT in its lawsuit, the design team operated initially without worrying about the project&rsquo;s final cost &mdash; at least contractually. </p>
